<resources>
    <string name="app_name">Aplikasi Sederhana</string>
    <string name="komponen">Komponen</string>
    <string name="layout">Layout</string>
    <string name="content_provider">Content Provider</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="service">Service</string>
    <string name="activity">Activity</string>
    <string name="link_materi">Link Materi</string>
    <string name="contoh_syntax">Contoh Syntax</string>
    <string name="contoh_syntax_activity">Contoh Syntax Activity</string>
    <string name="syntax_activity">Syntax Activity</string>
    <string name="syntax_service">Syntax Service</string>
    <string name="syntax_broadcast_receiver">Syntax Broadcast Receiver</string>
    <string name="syntax_content_provider">Syntax Content Provider</string>
    <string name="syntax_layout">Syntax Layout</string>
</resources>
