<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#1a8cff"
    android:gravity="center"
    tools:context="com.example.aplikasisederhana.Halaman4">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:gravity="center">
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/text"
            android:text="              Content Provider adalah penyedia konten dari satu aplikasi ke aplikasi lain atas perintah tertentu. Perintah tersebut ditangani oleh sebuah method dari class ContentResolver. Data dapat disimpan dalam sistem file, database atau di tempat lainnya.ContentProvider diimplementasikan sebagai subclass dari class ContentProvider dan harus menerapkan satu set standar API yang memungkinkan aplikasi lain untuk melakukan transaksi.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <GridLayout
                android:id="@+id/activity_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#1a8cff"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnHal41"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#1a8cff"
                        android:text="@string/link_materi"
                        android:textStyle="bold"
                        android:textColor="#ffffff"/>

                </LinearLayout>

            </GridLayout>


            <GridLayout
                android:id="@+id/service_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffffff"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnHal42"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#1a8cff"
                        android:text="@string/contoh_syntax"
                        android:textStyle="bold"
                        android:textColor="#ffffff"/>

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
